# OTCFM

./: .gitignore  CLAUDE.md  MGCCFF_FIX_REPORT.md  README.md  main.tex  pyproject.toml  ref.bib  report.md  requirements.txt
.github/: copilot-instructions.md
docs/: add_new_baselines_guide.md  report_formatted.md
external_methods/: readme.md
scripts/: analyze_multiview_ae.py  check_batch_issue.py  compare_settings.py  debug_pretrain.py  debug_training.py  diagnose_encoder.py  diagnose_loader.py  diagnose_otcfm.py  diagnose_training.py  final_diagnosis.py  final_localize.py  optimize_and_compare.py  run_ablation.py  run_experiment.py  run_optuna_tuning.py  run_robustness_test.py  simple_mvc_debug.py  test_standardscaler.py  tune_all_datasets.py
src/otcfm/: __init__.py  ablation.py  baselines.py  config.py  datasets.py  external_baselines.py  losses.py  metrics.py  models.py  ot_cfm.py  trainer.py  utils.py  visualization.py
